--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 		<script type="text/javascript">
 			(function(d, m){
 				var kommunicateSettings = 
-					{"appId":"2a2ec75c47722022d52c0ffa39333d464","popupWidget":true,"automaticChatOpenOnNavigation":true};
+					{"appId":"20cc9c2bbe876d0278c4067343a85befe","popupWidget":true,"automaticChatOpenOnNavigation":true};
 				var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
 				s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
 				var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
 				window.kommunicate = m; m._globals = kommunicateSettings;
 			})(document, window.kommunicate || {});
+		/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
 		</script>
 
     </head>
