--- a/index.html
+++ b/index.html
@@ -44,15 +44,34 @@
 		
 		<script type="text/javascript">
 			(function(d, m){
-				var kommunicateSettings = 
-					{"appId":"20cc9c2bbe876d0278c4067343a85befe","popupWidget":true,"automaticChatOpenOnNavigation":true};
-				var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-				s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-				var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-				window.kommunicate = m; m._globals = kommunicateSettings;
-			})(document, window.kommunicate || {});
-		/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+    /*---------------- Kommunicate settings start ----------------*/
+    var defaultSettings = {
+    "defaultBotIds": ["mediplus-ai-oeyvp"],
+    "defaultAssignee": "mediplus-ai-oeyvp", 
+    "skipRouting":true
+    };
+    var kommunicateSettings = {
+        "appId":"20cc9c2bbe876d0278c4067343a85befe",  
+        "automaticChatOpenOnNavigation":false,
+        "onInit": function() {
+            Kommunicate.updateSettings(defaultSettings); 
+        }
+    };
+    /*----------------- Kommunicate settings end ------------------*/
+    var s = document.createElement("script");
+    s.type = "text/javascript"; s.async = true;
+    s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+    var h = document.getElementsByTagName("head")[0];
+    h.appendChild(s);
+    window.kommunicate = m;
+    m._globals = kommunicateSettings;
+})(document, window.kommunicate || {});
+
 		</script>
+		
+		
+		
+		
 
     </head>
     <body>
